--- a/index.html
+++ b/index.html
@@ -3,7 +3,99 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>My Portfolio</title>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <ul class="nav nav-tabs justify-content-end mt-2 gap-3">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="exp.html">EXPERIENCE</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="gallery.html">GALLERY</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">CONTACT</a>
+      </li>
+    </ul>
+    <div class="container">
+      <div class="row align-item-center">
+        <div class="col-md-4 mt-5">
+          <img src="image/IMG_2207.JPG" class="img-fluid rounded" />
+        </div>
+        <div class="col-md-8 mt-5">
+          <div class="text-start display-6">Janjira Thanachooknawi</div>
+          <div class="text-muted">
+            I am Apple, a second-year Computer Engineering student at Chiang Mai
+            University. I love reading novels, and bedtime is my favorite part
+            of the day.
+          </div>
+          <div class="text-start display-7 my-3">SKILLS</div>
+          <div class="container mt-2 mb-4">
+            <div class="border border-secondary rounded shadow-sm p-3">
+              <div class="row align-items-center">
+                <div
+                  class="col-12 col-md-4 mb-3 mb-md-0 overflow-hidden"
+                  style="max-width: 150px; max-height: 150px"
+                >
+                  <img
+                    src="image/cpp_logo.png"
+                    class="img-fluid rounded"
+                    style="object-fit: cover; width: 100%; height: 100%"
+                    alt="C++ Logo"
+                  />
+                </div>
+                <div class="col-12 col-md-8">
+                  <p class="fw-semibold fs-5 mb-1">Programming</p>
+                  <span class="text-muted"
+                    >I have experienced coding in C++</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container mt-2 mb-4">
+            <div class="border border-secondary rounded shadow-sm p-3">
+              <div class="row align-items-center">
+                <div
+                  class="col-12 col-md-4 mb-3 mb-md-0 overflow-hidden"
+                  style="max-width: 150px; max-height: 150px"
+                >
+                  <img
+                    src="image/soft-skills-1536x864.webp"
+                    class="img-fluid rounded"
+                    style="object-fit: cover; width: 100%; height: 100%"
+                    alt="C++ Logo"
+                  />
+                </div>
+                <div class="col-12 col-md-8">
+                  <p class="fw-semibold fs-5 mb-1">Soft skills</p>
+                  <span class="text-muted"
+                    >Work effectively in a team environment <br />Adapt flexibly
+                    to various situations <br />Communicate clearly and
+                    persuasively to influence others</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
