--- a/gallery.html
+++ b/gallery.html
@@ -50,8 +50,8 @@
         <div class="card-body">
           <h5 class="card-title">Pétanque ball</h5>
           <p class="card-text">
-            "The set of pétanque balls I used in the 4-Year Sports Game at
-            Chiang Mai University.
+            The set of pétanque balls I used in the 4-Year Sports Game at Chiang
+            Mai University.
           </p>
         </div>
       </div>
